--- a/PCA_Practice/Practice_Session_PCA.ipynb
+++ b/PCA_Practice/Practice_Session_PCA.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Getting Started\n",
+    "### Part 1: Getting Started\n",
     "\n",
     "#### Using the VMs\n",
     "\n",
@@ -65,7 +65,27 @@
     "will use throughout this year.\n",
     "Important: The only maintained and updated version of MLDemos is the Windows version.\n",
     "If your personal computer is a mac or linux, you have to use the virtual machine which can\n",
-    "accessed remotely by any OS at __http://vdi.epfl.ch__)"
+    "accessed remotely by any OS at __http://vdi.epfl.ch__)\n",
+    "\n",
+    "### Part 2: How-to\n",
+    "\n",
+    "_**Numerical Datasets**_\n",
+    "\n",
+    "#### Import Numerical Datasets\n",
+    "The numerical datasets used for the practicals are csv files where each row represents a sample,\n",
+    "each column an attribute and the last column is the class in which the sample belongs to. Also\n",
+    "only the first row of the csv contains a short id tag for each attribute. Feel free to open the csv\n",
+    "files with applications like Excel in order to familiarize yourself with the layout.\n",
+    "\n",
+    "**Follow these steps to import the datasets.**\n",
+    "1. Launch MLDemos and select File > Import > Data from the menu and open the csv file you\n",
+    "want to load. In this example we will use the wines' dataset.\n",
+    "2. The data loading interface will pop up (see Figure 1). At this dialogue box select the: \"First\n",
+    "row as Header\" option and then click on the: \"Send data\" button. Now you should be able\n",
+    "to see how the data are distributed at the first two dimensions where the different colors\n",
+    "represent the classes (see Figure 2).\n",
+    "\n",
+    "<img src=\"PCA_Practice/Images/Figure1_DataLoad_Interface.png\" alt=\"Figure 1\" width=500 class=\"center\">"
    ]
   },
   {
