Fix image display issue

--- a/PCA_Practice/Practice_Session_PCA.ipynb
+++ b/PCA_Practice/Practice_Session_PCA.ipynb
@@ -85,7 +85,7 @@
     "to see how the data are distributed at the first two dimensions where the different colors\n",
     "represent the classes (see Figure 2).\n",
     "\n",
-    "<img src=\"PCA_Practice/Images/Figure1_DataLoad_Interface.png\" alt=\"Figure 1\" width=500 class=\"center\">"
+    "<img src=\"Images/Figure1_DataLoad_Interface.png\" alt=\"Figure 1\" width=500>"
    ]
   },
   {
