PCA Practice: One more picture added to ipynb

--- a/PCA_Practice/Practice_Session_PCA.ipynb
+++ b/PCA_Practice/Practice_Session_PCA.ipynb
@@ -85,7 +85,15 @@
     "to see how the data are distributed at the first two dimensions where the different colors\n",
     "represent the classes (see Figure 2).\n",
     "\n",
-    "<img src=\"Images/Figure1_DataLoad_Interface.png\" alt=\"Figure 1\" width=500>"
+    "<img src=\"Images/Figure1_DataLoad_Interface.png\" alt=\"Figure 1\" width=500>\n",
+    "\n",
+    "Figure 1: Data loading interface. Select the : “First row as Header” option and click on send\n",
+    "data button\n",
+    "\n",
+    "\n",
+    "<img src=\"Images/Figure2_Dataset_Visualization.png\" alt=\"Figure 2\" width=500>\n",
+    "\n",
+    "Figure 2: 2D visualization of the dataset"
    ]
   },
   {
