PCA tutorial completed

--- a/PCA_Practice/Practice_Session_PCA.ipynb
+++ b/PCA_Practice/Practice_Session_PCA.ipynb
@@ -123,7 +123,7 @@
     "* Select the Principal Components analysis from the drop-down menu (Box 3 in Fig. 4)\n",
     "and press the project button (Box 4 in Fig. 4)\n",
     "\n",
-    "This will project the original data to all the principal components. MIDemos also provides\n",
+    "This will project the original data to all the principal components. MLDemos also provides\n",
     "the percentage of explained variance for each principal component ( Box 5 in Fig. 4 ) and the\n",
     "reconstruction error curve w.r.t. the principal components ( Box 6 in Fig. 4 )\n",
     "\n",
@@ -149,7 +149,34 @@
     "Now only the projections which were specified by the range are kept and the others are\n",
     "discarded.\n",
     "\n",
-    "<img src=\"Images\\Figure5_ Dimensionality_Reduction.png\" alt=\"Figure 5\" width=500>"
+    "<img src=\"Images\\Figure5_ Dimensionality_Reduction.png\" alt=\"Figure 5\" width=500>\n",
+    "\n",
+    "Figure 5: Dimensionality Reduction\n",
+    "\n",
+    "_**Image Datasets**_\n",
+    "\n",
+    "#### Importing and applying PCA on Image Datasets\n",
+    "\n",
+    "1. Select Plugins > Input/Output > PCA faces\n",
+    "\n",
+    "2. From the PCA faces click the Load Dataset button (Box 1 in Fig. 6) and select the faces.png\n",
+    "file\n",
+    "\n",
+    "This will load a set of images. The images have class labels, illustrated with a color box\n",
+    "around the images. You can visualize the eigenvectors of the data by selecting the Eigenvectors button (Box 2 in Fig. 6).\n",
+    "\n",
+    "<img src=\"Images\\Figure6_PCA_faces_GUI.png\" alt=\"Figure 6\" width=750>\n",
+    "\n",
+    "Figure 6: PCA faces GUI\n",
+    "\n",
+    "Alongside with the visualization of the eigenvectors, you can get the reconstruction error\n",
+    "curve and the percentage of explained variance per projection (Fig. 7). Based on those you can\n",
+    "select how many eigenvectors to keep (box 3 in Fig. 6). Just select the number and close the\n",
+    "GUI.\n",
+    "\n",
+    "<img src=\"Images\\Figure7_Eigenvectors_Visualization.png\" alt=\"Figure 7\" width=750>\n",
+    "\n",
+    "Figure 7: Visualization of eigenvectors as images"
    ]
   },
   {
