--- a/PCA_Practice/Practice_Session_PCA.ipynb
+++ b/PCA_Practice/Practice_Session_PCA.ipynb
@@ -180,10 +180,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions\n",
+    "\n",
+    "**Q1:** Import the faces dataset and pertorm dimensionality reduction. How many and which\n",
+    "projections are needed to linearly separate all the classes of the dataset? Which faces\n",
+    "(samples) are projected at the highest values on the coordinates of the first three eigenvectors and which are canceled out (projected close to zero on the coordinates of the first\n",
+    "three eigenvectors )? Examine the illustration of the eigenvectors (eigenfaces) and explain\n",
+    "how they are related.\n",
+    "\n",
+    "Picking 4 components we obtain:\n",
+    "\n",
+    "<img src=\"Images\\Q1_im1.png\" width=500>\n",
+    "\n",
+    "Eigenvalues of image dataset:\n",
+    "\n",
+    "<img src=\"Images\\Q1_Eigenvalues_percentages.png\" width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
